test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-foreach-data-sync/01-create.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- manifests.yaml
assert:
- cluster-policy-ready.yaml
