test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-foreach-data-sync/04-delete-cluster-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: kyverno.io/v2beta1
    kind: ClusterPolicy
    name: cpol-foreach-data-sync
