test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-foreach-data-sync/manifests.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-foreach-data-sync
spec:
  rules:
    - name: cpol-foreach-data-sync-secret
      match:
        any:
          - resources:
              kinds:
                - Pod
      generate:
        foreach:
          - list: "request.object.spec.containers"
            generateResources:
              - kind: Secret
                apiVersion: v1
                name: "newsecret"
                namespace: "default"
                synchronize: true
                data:
                  foo: YmFy
